objects/APTS_MSPA_Team_Member__c.object
<CustomObject>
    <description>R4 Poc Copy MSPA Team Member functionality.</description>
    <fields>
        <fullName>APTS_Access_Level__c</fullName>
        <description>R4 Poc - MSPA team member access level</description>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Id__c</fullName>
        <formula>CASESAFEID(APTS_Agreement__r.Apttus__Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_RecordType_Id__c</fullName>
        <formula>CASESAFEID(APTS_Agreement__r.RecordTypeId)</formula>
        <label>Agreement RecordType Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>MSPA_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Record_Type_Name__c</fullName>
        <formula>APTS_Agreement__r.APTS_Division__c</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Team_Role__c</fullName>
        <label>Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM/SAM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Delivery Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Responsible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>User.Country</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>ABB External Competitive Sales Agent Profile</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>MSPA_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Used for the lookup filter of the user.</description>
        <inlineHelpText>This field is pre-populated from the Agreement. Please do not change this.</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Text__c</fullName>
        <description>CLM - Backend field created to achieve the &apos;Send Email to Agreement Team Member&apos; functionality.</description>
        <label>Last Activity Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If value is Manual then send the email notification to the user.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Agreement Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATM-{000000}</displayFormat>
        <label>Agreement Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>User_Filter_should_be_mandatory_for_MSPA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(APTS_Agreement__r.RecordType.Name == &apos;MSPA&apos;,
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.Safe__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR(TEXT(APTS_Agreement__r.APTS_Country__c) &lt;&gt; APTS_User__r.Country,
APTS_User__r.Profile.Name = &apos;ABB External Competitive Sales Agent Profile&apos;))</errorConditionFormula>
        <errorMessage>This user should be of same country as agreement and should not have profile as &quot;ABB External Competitive Sales Agent Profile&quot;.</errorMessage>
    </validationRules>
</CustomObject>